# two_conan_containers

./: README.md
my_app/: CMakeLists.txt  conanfile.py
my_app/src/: main.cpp
my_library/: CMakeLists.txt  conanfile.py
my_library/include/: addition.h
my_library/src/: addition.cpp  main.cpp
